--- a/test/cpp-proj/cpp-proj.vcxproj
+++ b/test/cpp-proj/cpp-proj.vcxproj
@@ -15,6 +15,7 @@
 <Import Project="$(VCTargetsPath)\Microsoft.Cpp.default.props" />
 
 <PropertyGroup>
+	<PreferredToolArchitecture>x64</PreferredToolArchitecture>
   <ConfigurationType>Application</ConfigurationType>
   <PlatformToolset>v143</PlatformToolset>
 </PropertyGroup>
