--- a/CompileCommandsJson.csproj
+++ b/CompileCommandsJson.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net462</TargetFrameworks>
     <RootNamespace>CompileCommandsJson</RootNamespace>
     <Product />
     <Description>A logger for MSBuild that emits a compile_commands.json file.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <SelfContained>true</SelfContained>
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="14.3.0" PrivateAssets="All" />
