Add another file

--- a/test/cpp-proj/cpp-proj.vcxproj
+++ b/test/cpp-proj/cpp-proj.vcxproj
@@ -138,10 +138,14 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup> -->
-  <ItemGroup>
-    <ClCompile Include="$(MSBuildProjectDirectory)\src\main.cpp">
+  <ItemDefinitionGroup>
+    <ClCompile>
     <AdditionalIncludeDirectories>$(MSBuildProjectDirectory)\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="$(MSBuildProjectDirectory)\src\main.cpp" />
+    <ClCompile Include="$(MSBuildProjectDirectory)\src\utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <!-- <ImportGroup Label="ExtensionTargets">
